--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -98,12 +98,13 @@ add_custom_command(OUTPUT ${TYPE_FACE_DIRECTORY_FILE}
 if(SGE_BUILD_SCRIPTCORE)
     set(SGE_MSBUILD_ARGS "")
     foreach(ARGUMENT ${MSBUILD_ARGS})
-        set(SGE_MSBUILD_ARGS "${SGE_MSBUILD_ARGS}${ARGUMENT} ")
+        set(SGE_MSBUILD_ARGS "${SGE_MSBUILD_ARGS}\"${ARGUMENT}\", ")
     endforeach()
+    set(SGE_MSBUILD_ARGS "{ ${SGE_MSBUILD_ARGS} }")
 
     list(APPEND SGE_DEFINES SGE_BUILD_SCRIPT_ASSEMBLY
         SGE_MSBUILD_EXE="${MSBUILD_EXE}"
-        SGE_MSBUILD_ARGS="${SGE_MSBUILD_ARGS}")
+        SGE_MSBUILD_ARGS=${SGE_MSBUILD_ARGS})
 endif()
 
 # add target
