--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -5,6 +5,12 @@ set(VENDOR_DIR "${CMAKE_SOURCE_DIR}/vendor")
 set(ASSET_DIR "${CMAKE_SOURCE_DIR}/assets")
 set(SGE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
+if(SGE_PLATFORM_MACOSX)
+    set(SGE_TARGET_ARCHITECTURE ${CMAKE_OSX_ARCHITECTURES})
+else()
+    set(SGE_TARGET_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+endif()
+
 # find mono libs
 if(SGE_PLATFORM_WINDOWS)
     set(MONO_PLATFORM windows)
@@ -13,9 +19,9 @@ elseif(SGE_PLATFORM_MACOSX)
 elseif(SGE_PLATFORM_LINUX)
     set(MONO_PLATFORM linux)
 endif()
-file(GLOB MONO_LIBS CONFIGURE_DEPENDS "${VENDOR_DIR}/mono/lib/${MONO_PLATFORM}/${CMAKE_SYSTEM_PROCESSOR}/*")
+file(GLOB MONO_LIBS CONFIGURE_DEPENDS "${VENDOR_DIR}/mono/lib/${MONO_PLATFORM}/${SGE_TARGET_ARCHITECTURE}/*")
 
-if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
+if(${SGE_TARGET_ARCHITECTURE} STREQUAL "x86_64" OR ${SGE_TARGET_ARCHITECTURE} STREQUAL "AMD64")
     set(SGE_CPU_ARCHITECTURE x64)
 else()
     set(SGE_CPU_ARCHITECTURE ARM64)
