--- a/sge/sge_config.h.in
+++ b/sge/sge_config.h.in
@@ -18,3 +18,7 @@
 
 #cmakedefine SGE_CPU_ARCHITECTURE "@SGE_CPU_ARCHITECTURE@"
 #cmakedefine SGE_VERSION "@SGE_VERSION@"
+
+#cmakedefine SGE_BUILD_SCRIPTCORE
+#cmakedefine SGE_MSBUILD_EXE "@SGE_MSBUILD_EXE@"
+#cmakedefine SGE_MSBUILD_ARGS @SGE_MSBUILD_ARGS@
