--- a/sge/sge_config.h.in
+++ b/sge/sge_config.h.in
@@ -22,3 +22,6 @@
 #cmakedefine SGE_BUILD_SCRIPTCORE
 #cmakedefine SGE_MSBUILD_EXE "@SGE_MSBUILD_EXE@"
 #cmakedefine SGE_MSBUILD_ARGS @SGE_MSBUILD_ARGS@
+
+#cmakedefine SGE_DEBUGGER_AGENT_ADDRESS "@SGE_DEBUGGER_AGENT_ADDRESS@"
+#cmakedefine SGE_DEBUGGER_AGENT_PORT "@SGE_DEBUGGER_AGENT_PORT@"
