--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ${{ matrix.os-name }}
     strategy:
       matrix:
-        os-name: [ ubuntu-latest, windows-latest, macos-latest ]
+        os-name: [ ubuntu-latest, windows-2019, macos-latest ]
     steps:
       - name: checkout
         uses: actions/checkout@v2
