--- a/debugger/SGE.Debugger.csproj
+++ b/debugger/SGE.Debugger.csproj
@@ -4,8 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net472</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\vendor\mono\submodules\debugger-libs\Mono.Debugging.Soft\Mono.Debugging.Soft.csproj" />
