--- a/sgm/CMakeLists.txt
+++ b/sgm/CMakeLists.txt
@@ -11,10 +11,13 @@ set_target_properties(sgm PROPERTIES CXX_STANDARD 17 FOLDER "tools")
 copy_required_dlls(sgm)
 if(SGE_BUILD_SCRIPTCORE)
     set(SGE_DEBUGGER_PATH "${CMAKE_SOURCE_DIR}/debugger/SGE.Debugger.csproj")
-    add_custom_command(TARGET sgm PRE_BUILD
+    add_custom_target(build-debugger ALL
         COMMAND dotnet restore ${SGE_DEBUGGER_PATH}
         COMMAND ${MSBUILD_ARGS} -noLogo -v:m -p:Configuration=$<CONFIG> ${SGE_DEBUGGER_PATH}
         COMMENT "Building SGE.Debugger.exe")
+
+    set_target_properties(build-debugger PROPERTIES FOLDER "tools")
+    add_dependencies(sgm build-debugger)
 endif()
 
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.16)
