--- a/assets/assemblies/SGE.targets
+++ b/assets/assemblies/SGE.targets
@@ -1,19 +1,11 @@
 <Project>
 
   <PropertyGroup>
-    <OutputPath>$(MSBuildThisFileDirectory)</OutputPath>
+    <OutDir>$(MSBuildThisFileDirectory)\$(Configuration)\$(AssemblyName)</OutDir>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DefineConstants>SGE_DEBUG</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <OutputPath>$(OutputPath)\Release</OutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(TargetFrameworkVersion)' == '' ">
-    <OutDir>$(MSBuildThisFileDirectory)\$(Configuration)</OutDir>
   </PropertyGroup>
 
 </Project>
