--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -5,12 +5,6 @@ set(VENDOR_DIR "${CMAKE_SOURCE_DIR}/vendor")
 set(ASSET_DIR "${CMAKE_SOURCE_DIR}/assets")
 set(SGE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
-if(SGE_PLATFORM_MACOSX)
-    set(SGE_TARGET_ARCHITECTURE ${CMAKE_OSX_ARCHITECTURES})
-else()
-    set(SGE_TARGET_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
-endif()
-
 # find mono libs
 if(SGE_PLATFORM_WINDOWS)
     set(MONO_PLATFORM windows)
@@ -21,22 +15,21 @@ elseif(SGE_PLATFORM_LINUX)
 endif()
 file(GLOB MONO_LIBS CONFIGURE_DEPENDS "${VENDOR_DIR}/mono/lib/${MONO_PLATFORM}/${SGE_TARGET_ARCHITECTURE}/*")
 
-if(${SGE_TARGET_ARCHITECTURE} STREQUAL "x86_64" OR ${SGE_TARGET_ARCHITECTURE} STREQUAL "AMD64")
-    set(SGE_CPU_ARCHITECTURE x64)
-else()
-    set(SGE_CPU_ARCHITECTURE ARM64)
-endif()
-
 # msbuild shenanigans
 if(SGE_BUILD_SCRIPTCORE)
+    set(SGE_DOTNET_EXE ${DOTNET_EXE})
+endif()
+
+if(SGE_BUILD_DEBUGGER)
     set(SGE_MSBUILD_ARGS "")
     foreach(ARGUMENT ${MSBUILD_ARGS})
         set(SGE_MSBUILD_ARGS "${SGE_MSBUILD_ARGS}\"${ARGUMENT}\", ")
     endforeach()
-
+    
     set(SGE_MSBUILD_EXE ${MSBUILD_EXE})
     set(SGE_MSBUILD_ARGS "{ ${SGE_MSBUILD_ARGS} }")
 endif()
+
 
 # configuration header
 set(SGE_CONFIG "${CMAKE_CURRENT_BINARY_DIR}/sge_config.h")
