--- a/sgm/CMakeLists.txt
+++ b/sgm/CMakeLists.txt
@@ -9,10 +9,10 @@ target_link_libraries(sgm PRIVATE sge)
 set_target_properties(sgm PROPERTIES CXX_STANDARD 17 FOLDER "tools")
 
 copy_required_dlls(sgm)
-if(SGE_BUILD_SCRIPTCORE)
+if(SGE_BUILD_DEBUGGER)
     set(SGE_DEBUGGER_PATH "${CMAKE_SOURCE_DIR}/debugger/SGE.Debugger.csproj")
     add_custom_target(build-debugger ALL
-        COMMAND dotnet restore ${SGE_DEBUGGER_PATH}
+        COMMAND ${DOTNET_EXE} restore ${SGE_DEBUGGER_PATH}
         COMMAND ${MSBUILD_ARGS} -noLogo -v:m -p:Configuration=$<CONFIG> ${SGE_DEBUGGER_PATH}
         COMMENT "Building SGE.Debugger.exe")
 
