expose internal call registration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,11 +124,13 @@ if(SGE_BUILD_SCRIPTCORE)
         endforeach()
 
         set(SCRIPTCORE_NAME SGE.Scriptcore)
+        set(EDITOR_NAME SGE.Editor)
     else()
-        set(SCRIPTCORE_NAME managed)
-        set(SLN_PATH "${CSHARP_DIR}/csharp.sln")
+        set(MANAGED_TARGET_NAME managed)
+        set(SCRIPTCORE_NAME ${MANAGED_PROJECT_NAME})
 
-        add_custom_target(${SCRIPTCORE_NAME} ALL
+        set(SLN_PATH "${CSHARP_DIR}/csharp.sln")
+        add_custom_target(${MANAGED_PROJECT_NAME} ALL
             COMMAND ${DOTNET_EXE} build --nologo -v m -c $<CONFIG> ${SLN_PATH}
             COMMENT "Building managed projects...")
     endif()
