--- a/sge/CMakeLists.txt
+++ b/sge/CMakeLists.txt
@@ -37,7 +37,7 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/sge_config.h.in" ${SGE_CONFIG} @ONLY
 
 # base lists
 set(SGE_INCLUDES ${SGE_DIR} "${VENDOR_DIR}/mono/include" "${VENDOR_DIR}/glm" ${CMAKE_CURRENT_BINARY_DIR})
-set(SGE_LIBS spdlog shaderc spirv-cross-glsl stb EnTT box2d sge-imgui nlohmann_json ${MONO_LIBS})
+set(SGE_LIBS spdlog shaderc spirv-cross-glsl stb miniaudio EnTT box2d sge-imgui nlohmann_json ${MONO_LIBS})
 
 # nvidia nsight aftermath
 if(SGE_USE_AFTERMATH)
@@ -108,11 +108,12 @@ add_custom_command(OUTPUT ${TYPE_FACE_DIRECTORY_FILE}
 # add target
 set(SGE_MANIFEST ${SGE_SOURCE} ${SGE_SHADERS} ${TYPE_FACE_DIRECTORY_FILE} ${SGE_CONFIG})
 add_library(sge STATIC ${SGE_MANIFEST})
+
+set_target_properties(sge PROPERTIES CXX_STANDARD 17 FOLDER "core")
 target_link_libraries(sge PUBLIC ${SGE_LIBS})
 target_include_directories(sge PUBLIC ${SGE_INCLUDES})
 target_compile_definitions(sge PUBLIC ${SGE_DEFINES} $<$<CONFIG:Debug>:SGE_DEBUG>
                                PRIVATE SGE_INTERNAL)
-set_target_properties(sge PROPERTIES CXX_STANDARD 17 FOLDER "core")
 
 # source groups
 foreach(SGE_SOURCE_FILE ${SGE_MANIFEST})
